# ocr_match_system

./: .gitignore  CMakeLists.txt  README.md  my_thread.cc  my_thread.h  widget.cpp  widget.h  widget.ui
